[package]
name = "config-validator"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.109"
serde = { workspace = true }
clap = { workspace = true }
clap_derive = { workspace = true }

[dev-dependencies]
derive_builder = "0.20.2"
anyhow = { workspace = true }
